# MAD-SAY-Hackers

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  startup.sh
.github/workflows/: ci.yml  nightly.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py
app/api/v1/: auth.py  health.py  memory.py  repairs.py  rules.py  wiki.py
app/core/: config.py  database.py  logging.py  metrics.py  security.py
app/dependencies/: auth.py  auth.py:Zone.Identifier
app/middleware/: rate_limiter.py
app/models/: audit_log.py  memory_entry.py  repair_session.py  rule.py  user.py
app/repositories/: audit_repository.py  memory_repository.py  repair_repository.py  rule_repository.py
app/schemas/: auth.py  error_signature.py  repair.py
app/services/: cache_service.py  fault_localizer.py  llm_gateway.py  memory_service.py  patch_applier.py  repair_agent.py  repair_orchestrator.py  rule_engine.py  safety_validator.py  wiki_service.py
config/: rules.yaml
frontend/: index.html
tests/concurrency/: test_concurrent_repairs.py
tests/integration/: test_repairs.py
tests/unit/: test_confidence.py  test_fault_localizer.py  test_rate_limiter.py  test_rule_engine.py  test_safety_validator.py
